--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
 h1 {
   font-family: "Courier New", Courier, monospace;
 }
+.nav-left img {
+  width: 100px;
+  height: auto;
+}
+
+.nav-left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+  background-color: #f5f5f5;
+}
